OO-2013: implement the list as a flexi table with search, sort and paging